@@ -2,6 +2,7 @@
 
 2009-02-06 Mike Ratcliffe <sabine.michael.ratcliffe@gmail.com>
   * firebug-lite.js: Added Firefox version check when using firebug.env.override to prevent problems when override is set in FF3 where window.console is a getter.
+  * firebug-lite.js: Moved console initialization code inside of the Firebug object to remove some global variables.
 
 2009-02-05 Mike Ratcliffe <sabine.michael.ratcliffe@gmail.com>
   * firebug-lite.js: Added firebug.env.detectFirebug to prevent FBLite opening when Firebug is enabled (actually the Firebug Console). To run FBLite and Firebug at the same time it is now necessary to change the value of detectFirebug directly in firebug-lite.js
